# tanks

./: .gitignore  CMakeLists.txt  README.md  README.txt
Framework/: CMakeLists.txt
Framework/CMAKE/: FindSDL2.cmake
Framework/inc/: Framework.h
Framework/src/: launch.cpp
Project2/: CMakeLists.txt
Project2/data/: MAP.txt
Project2/inc/: animation.h  my_framework.h  objects.h  tanks.h
Project2/src/: animation.cpp  game.cpp  my_framework.cpp  objects.cpp  tanks.cpp
